# privio

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  privio.conf  privio.conf.example  privioConfig.h.in
include/: privio.h  privio_string.h
src/: CMakeLists.txt  auth.c  authenticate.c  cmdhashes.c  cp.c  cpmv.c  cpmvrm.c  lines.c  list.c  mkdir.c  mv.c  privio.c  privioUtil.c  reader.c  rename.c  string.c  tail.c  type.c  writer.c  zip.c
